# autoMBIST

./: .gitignore  README.md  changelog.md  config.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-publish.yml
rtl/: input_demo_8x16_scn4m.v  mbist_algo.sv  mbist_fsm.sv  mbist_tb.sv  mbist_top.sv  sram_model.sv
rtl/march_c/: march_c_algo.sv  march_c_fsm.sv  march_c_top.sv
rtl/march_raw/: march_raw_algo.sv  march_raw_fsm.sv  march_raw_top.sv
scripts/: synthesize_sram.py  synthesize_sram.sh
src/: fault_gen.py  openmbist.py
src/autombist/: __init__.py  fault_gen.py  generator.py  main.py
src/autombist/templates/: fault_makefile_template.j2  saboteur_template.j2  wrapper_template.j2
src/templates/: fault_makefile_template.j2  saboteur_template.j2  wrapper_template.j2
tests/hardware/: Makefile  algo_module_probe.sv  input_demo_8x16_scn4m_mbist.v  sram_1rw.v  test_algo_modules.py  test_mbist.py
tests/software/: test_generator.py
